--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									{
 										'Content-Type': 'application/json;charset=utf-8',
 										'Accept': 'application/vnd.github.v3.text-match+json',
-										'User-Agent': 'shubhamshubhankar'
+										'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_8_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/29.0.1521.3 Safari/537.36'
 									}
 									});
 								
